tests/modules/good/import_std.hel
// @name import_std
// @phase modules
// @expect success

import std.io

main = () : IO<()> {
    io.println("stdio ok");
}
